WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273737
TestWebKitAPI.KeyboardInputTests.EditableWebViewRequiresKeyboardWhenFirstResponder fails on iPhone Simulator
https://bugs.webkit.org/show_bug.cgi?id=273737
Summary
TestWebKitAPI.KeyboardInputTests.EditableWebViewRequiresKeyboardWhenFirstResp...
David Kilzer (:ddkilzer)
Reported
2024-05-04 10:57:07 PDT
TestWebKitAPI.KeyboardInputTests.EditableWebViewRequiresKeyboardWhenFirstResponder is a constant failure on iPhone Simulator, and sometimes crashes. Works fine on iPad Simulator. Results: <
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.KeyboardInputTests.EditableWebViewRequiresKeyboardWhenFirstResponder
> See: API-Tests-iOS-Simulator-EWS <
https://ews-build.webkit.org/#/builders/13
>
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2024-05-04 11:01:57 PDT
Failures started when upgrading bots to iOS 17.4.
Radar WebKit Bug Importer
Comment 2
2024-05-04 11:04:38 PDT
<
rdar://problem/127547640
>
Wenson Hsieh
Comment 3
2024-05-06 12:58:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28197
EWS
Comment 4
2024-05-06 15:22:24 PDT
Committed
278427@main
(a03f439c1167): <
https://commits.webkit.org/278427@main
> Reviewed commits have been landed. Closing PR #28197 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug